RESOLVED FIXED119419
[Forms: color] WebColorPickerMac deconstructor shouldn't assert a variable
https://bugs.webkit.org/show_bug.cgi?id=119419
Summary [Forms: color] WebColorPickerMac deconstructor shouldn't assert a variable
Ruth Fong
Reported 2013-08-01 17:58:22 PDT
In WebColorPickerMac.mm, ~WebColorPickerMac asserts to see if one of its variables is null. Instead it should check to see if its null; if not, it should properly invalidate it.
Attachments
Patch (1.46 KB, patch)
2013-08-02 10:53 PDT, Ruth Fong
no flags
Radar WebKit Bug Importer
Comment 1 2013-08-01 18:00:58 PDT
Ruth Fong
Comment 2 2013-08-02 10:53:52 PDT
Tim Horton
Comment 3 2013-08-02 11:27:24 PDT
Comment on attachment 208033 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=208033&action=review > Source/WebKit2/UIProcess/mac/WebColorPickerMac.mm:-85 > -#if ENABLE(INPUT_TYPE_COLOR_POPOVER) So, we need to endPicker() for all <input type='color'>?
WebKit Commit Bot
Comment 4 2013-08-02 14:34:26 PDT
Comment on attachment 208033 [details] Patch Clearing flags on attachment: 208033 Committed r153670: <http://trac.webkit.org/changeset/153670>
WebKit Commit Bot
Comment 5 2013-08-02 14:34:27 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.