[Forms: color] WebColorPickerMac deconstructor shouldn't assert a variable <rdar://problem/14627633> and https://bugs.webkit.org/show_bug.cgi?id=119419

Patch by Ruth Fong <ruth_fong@apple.com> on 2013-08-02
Reviewed by Tim Horton.

* UIProcess/mac/WebColorPickerMac.mm:
(WebKit::WebColorPickerMac::~WebColorPickerMac): If the m_colorPickerUI variable
  is not null, then properly destroy it first before destroying WebColorPickerMac object.

Canonical link: https://commits.webkit.org/137405@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@153670 268f45cc-cd09-0410-ab3c-d52691b4dbfc